Fixed Compilation Errors

--- a/controller/CMakeLists.txt
+++ b/controller/CMakeLists.txt
@@ -1,20 +1,19 @@
-# Create a library called "myLib2" (in Linux, this library is created
-# with the name of either libmyLib2.a or myLib2.so).
-add_library (controller
+# Create a library called "controller" (in Linux, this library is created
+# with the name of either libcontroller.a or controller.so).
+add_library(controller
   # list of cpp source files:
   controller.cpp
   PIDController.cpp
   Vehicle.cpp
   AckermannController.cpp
-  )
-
+)
 # Indicate what directories should be added to the include file search
 # path when using this library.
 target_include_directories(controller PUBLIC
   # list of directories:
-  ${COMMON_INCLUDE_DIRS}
-  )
-
+  ${CMAKE_SOURCE_DIR}/include   
+)
+# Link necessary libraries (if any)
 target_link_libraries(controller PUBLIC ${COMMON_LIBS})
-
+# Link options
 target_link_options(controller PUBLIC --static)
